created preliminary navbar

--- a/index.html
+++ b/index.html
@@ -9,11 +9,23 @@
 	<body>
 
 		<div class="nav">
+			<span class="logo">
+				<!--<img src="assets/images/StudyScopeLogoBlackTransparent.png">-->
+				filler
+			</span>
 			<div class="nav-buttons">
-				<div class="logo">
-					<!--<img src="assets/images/StudyScopeLogoBlackTransparent.png">-->
-					filler
-				</div>
+				<span class="nav-button hover-underline-animation">
+					PROGRAMS
+				</span>
+				<span class="nav-button hover-underline-animation">
+					CAREERS
+				</span>
+				<span class="nav-button hover-underline-animation">
+					CONTACT
+				</span>
+				<span class="nav-button register">
+					REGISTER
+				</span>
 			</div>
 		</div>
 
