--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 	</head>
 	<body>
 
+		<div id="gradient-1" class="background-gradient"></div>
+		<div id="gradient-2" class="background-gradient"></div>
+
+
 		<div class="nav">
 			<span class="logo">
 				<!--<img src="assets/images/StudyScopeLogoBlackTransparent.png">-->
@@ -32,7 +36,9 @@
 		<div class="main-container">
 
 			<div class="cta">
-				
+				<div class="cta-side">TUTORING</div>
+				<div class="cta-main">BY STUDENTS,</div>
+				<div class="cta-side">FOR STUDENTS</div>
 			</div>
 
 			<div class="hook">
