--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>🏠 / StudyScope</title>
 		<link rel="stylesheet" type="text/css" href="styles/index.css">
+		<script src='scripts/index.js'></script>
 	</head>
 	<body>
+
 
 		<div id="gradient-1" class="background-gradient"></div>
 		<div id="gradient-2" class="background-gradient"></div>
@@ -38,7 +40,7 @@
 			<div class="cta">
 				<div class="cta-side">TUTORING</div>
 				<div class="cta-main">BY STUDENTS,</div>
-				<div class="cta-side">FOR STUDENTS</div>
+				<div class="cta-side">FOR <div id="flip-word">STUDENTS</div></div>
 			</div>
 
 			<div class="hook">
