--- a/index.html
+++ b/index.html
@@ -15,23 +15,29 @@
 
 
 		<div class="nav">
-			<span class="logo">
-				<!--<img src="assets/images/StudyScopeLogoBlackTransparent.png">-->
-				filler
-			</span>
+			<div class="logo-wrap">
+				<a href="https://www.google.com">
+					<img id="logo" src="assets/images/CustomLogo.png">
+				</a>
+			</div>
 			<div class="nav-buttons">
-				<span class="nav-button hover-underline-animation">
-					PROGRAMS
-				</span>
-				<span class="nav-button hover-underline-animation">
-					CAREERS
-				</span>
-				<span class="nav-button hover-underline-animation">
-					CONTACT
-				</span>
-				<span class="nav-button register">
-					REGISTER
-				</span>
+				<div class="nav-buttons-container">
+					<span class="nav-button hover-underline-animation">
+						PROGRAMS
+					</span>
+					<span class="nav-button hover-underline-animation">
+						CAREERS
+					</span>
+					<span class="nav-button hover-underline-animation">
+						CONTACT
+					</span>
+					<span class="nav-button hover-underline-animation">
+						ABOUT US
+					</span>
+					<span class="nav-button register">
+						REGISTER
+					</span>
+				</div>
 			</div>
 		</div>
 
