added learn more button

--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
 				<div class="cta-side">TUTORING</div>
 				<div class="cta-main">BY STUDENTS,</div>
 				<div class="cta-side">FOR <div id="flip-word">STUDENTS</div></div>
+
+			</div>
+			<div class="cta-button-container">
+				<span class="cta-button register">
+					LEARN MORE
+				</span>
 			</div>
 
 			<div class="hook">
