--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="nav">
 			<div class="logo-wrap">
 				<a href="https://www.google.com">
-					<img id="logo" src="assets/images/CustomLogo.png">
+					<img id="logo" src="assets/images/CustomLogo.png" alt="StudyScope Logo">
 				</a>
 			</div>
 			<div class="nav-buttons">
@@ -56,7 +56,7 @@
 			</div>
 
 			<div class="hook">
-				
+				<img src="assets/images/paper-animated.gif" alt="Paper Animation">
 			</div>
 
 		</div>
