--- a/contact.html
+++ b/contact.html
@@ -3,18 +3,14 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>home / StudyScope</title>
-		<link rel="stylesheet" type="text/css" href="styles/index.css">
+		<title>🏠 / StudyScope</title>
 		<link rel="stylesheet" type="text/css" href="styles/nav.css">
-
+		<link rel="stylesheet" type="text/css" href="styles/contact.css">
 		<link rel="shortcut icon" href="assets/images/logo.ico" />
-		<script src='scripts/index.js'></script>
 	</head>
 	<body>
-
-
-		<div id="gradient-1" class="background-gradient"></div>
-		<div id="gradient-2" class="background-gradient"></div>
+		<canvas id="background"></canvas>
+		<script src='scripts/contact.js'></script>
 
 
 		<div class="nav">
@@ -45,23 +41,22 @@
 		</div>
 
 		<div class="main-container">
+			<div class="contact-box">
+				<div class="contact-info">
+					<div class="contact-title">Feel free to reach out!</div>
+					<div class="contact-extra-wrapper">
+						info@studyscopetutoring.com — (416) 846-3634
+					</div>
+				</div>
 
-			<div class="cta">
-				<div class="cta-side">TUTORING</div>
-				<div class="cta-main">BY STUDENTS,</div>
-				<div class="cta-side">FOR STUDENTS</div>
-
+				<div id="form">
+					<input type="text" id="name" placeholder="John Smith" autocomplete="off">
+					<textarea id="message" rows="10" placeholder="Your message here..."></textarea>
+					<div class="submit-container">
+						<span class="submit-span"><button id="submit" onclick="send()">Send</button></span>
+					</div>
+				</div>
 			</div>
-			<div class="cta-button-container">
-				<span class="cta-button register">
-					LEARN MORE
-				</span>
-			</div>
-
-			<div class="hook">
-				<img src="assets/images/paper-animated.gif" alt="Paper Animation">
-			</div>
-
 		</div>
 
 	</body>
