--- a/index2.html
+++ b/index2.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="styles/index2.css">
 	</head>
 	<body>
+		<script src="scripts/index.js"></script>
 
 		<div class="nav">
 			<div class="logo-wrap">
@@ -96,22 +97,72 @@
 				</div>
 				<div class="panels">
 					<div class="panel">
-						<div class="panel-image">
-
+						<div class="panel-image-wrapper">
+							<img src="assets/images/curriculum.jpg" alt="filler" class="panel-image">
 						</div>
 						<div class="panel-info">
 							<div class="panel-title">
 								Curriculum Based
 							</div>
 							<div class="panel-price">
-								$25 per session
+								$20-$25/hr
 							</div>
 							<div class='panel-tags'>
-								<div class='panel-tag green'>test tag</div>
-								<div class='panel-tag green'>test tag 2</div>
+								<div class='panel-tag green'>1 on 1</div>
+								<div class='panel-tag orange'>Small Class</div>
+								<div class='panel-tag blue'>Virtual</div>
+								<div class='panel-tag purple'>In-Person</div>
 							</div>
 							<div class="panel-description">
-								this is a somewhat proper description of what goes on in this bundle.
+								someone needs to write up a description for this
+							</div>
+							<div class='panel-register'>
+								Register
+							</div>
+						</div>
+					</div>
+
+					<div class="panel">
+						<div class="panel-image-wrapper">
+							<img src="assets/images/curriculum.jpg" alt="filler" class="panel-image">
+						</div>
+						<div class="panel-info">
+							<div class="panel-title">
+								Individual Tutoring
+							</div>
+							<div class="panel-price">
+								$15-$20/hr
+							</div>
+							<div class='panel-tags'>
+								<div class='panel-tag green'>1 on 1</div>
+								<div class='panel-tag blue'>Virtual</div>
+								<div class='panel-tag purple'>In-Person</div>
+							</div>
+							<div class="panel-description">
+								someone needs to write up a description for this
+							</div>
+							<div class='panel-register'>
+								Register
+							</div>
+						</div>
+					</div>
+
+					<div class="panel">
+						<div class="panel-image-wrapper">
+							<img src="assets/images/curriculum.jpg" alt="filler" class="panel-image">
+						</div>
+						<div class="panel-info">
+							<div class="panel-title">
+								English Language Learning
+							</div>
+							<div class="panel-price">
+								Price TBD
+							</div>
+							<div class='panel-tags'>
+								<div class='panel-tag red'>Coming Soon</div>
+							</div>
+							<div class="panel-description">
+								someone needs to write up a description for this
 							</div>
 							<div class='panel-register'>
 								Register
