--- a/index.html
+++ b/index.html
@@ -174,6 +174,12 @@
 
 		</div>
 
+		<footer>
+			© 2024 StudyScope, Inc.<br><br>
+			Let's keep in touch — (416) 846-3634 — info@studyscopetutoring.com<br>
+			we can put some links to social media here
+		</footer>
+
 
 	</body>
 </html>
