--- a/contact.html
+++ b/contact.html
@@ -3,40 +3,47 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>🏠 / StudyScope</title>
+		<title>StudyScope | Contact</title>
 		<link rel="stylesheet" type="text/css" href="styles/nav.css">
 		<link rel="stylesheet" type="text/css" href="styles/contact.css">
-		<link rel="shortcut icon" href="assets/images/logo.ico" />
+		<link rel="shortcut icon" href="assets/images/Icon.ico" />
 	</head>
 	<body>
-		<canvas id="background"></canvas>
-		<script src='scripts/contact.js'></script>
+		
 
 
 		<div class="nav">
 			<div class="logo-wrap">
-				<a href="index.html">
-					<img id="logo" src="assets/images/StudyScopeLogo.jpg" alt="StudyScope Logo">
+				<a href="index.html" class="logo-anchor">
+					<img id="logo" src="assets/images/magnifying.svg" alt="StudyScope Logo">
+					<span class="logo-text">
+						StudyScope
+					</span>
 				</a>
 			</div>
+
 			<div class="nav-buttons">
 				<div class="nav-buttons-container">
-					<a class="nav-button hover-underline-animation" href="programs.html">
-						PROGRAMS
+					<a class="nav-button hover-underline-animation" href="index.html#programs">
+						Programs
 					</a>
 					<a class="nav-button hover-underline-animation" href="apply.html">
-						JOIN OUR TEAM
+						Join Our Team
 					</a>
 					<a class="nav-button hover-underline-animation" href="contact.html">
-						CONTACT
+						Contact
 					</a>
 					<a class="nav-button hover-underline-animation" href="about.html">
-						ABOUT US
+						Company
 					</a>
-					<a class="nav-button register" href="contact.html">
-						REGISTER
-					</a>
+					
 				</div>
+			</div>
+
+			<div class="nav-register">
+				<a class="nav-button register" href="contact.html">
+					Register
+				</a>
 			</div>
 		</div>
 
@@ -57,7 +64,10 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div>	
+
+		<canvas id="background"></canvas>
+		<script src='scripts/contact.js'></script>	
 
 	</body>
 </html>
