--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 			<div class="nav-buttons">
 				<div class="nav-buttons-container">
-					<a class="nav-button hover-underline-animation" href="programs.html">
+					<a class="nav-button hover-underline-animation" onclick="scrollToPrograms()">
 						Programs
 					</a>
 					<a class="nav-button hover-underline-animation" href="apply.html">
