--- a/about.html
+++ b/about.html
@@ -8,6 +8,8 @@
 
 		<link rel="stylesheet" type="text/css" href="styles/nav.css">
 		<link rel="stylesheet" type="text/css" href="styles/about.css">
+		<link rel="stylesheet" type="text/css" href="styles/sufi.css">
+
 	</head>
 	<body>
 		<script src="scripts/slideupfadein.js"></script>
