updated register button

--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
 			</div>
 
 			<div class="nav-register">
-				<a class="nav-button register" href="contact.html">
+				<a class="nav-button register" href="javascript:document.write('this needs to redirect to the registering service')">
 					Register
 				</a>
 			</div>
