--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			</div>
 
 			<div class="nav-register">
-				<a class="nav-button register" href="contact.html">
+				<a class="nav-button register" href="javascript:document.write('this needs to redirect to the registering service')">
 					Register
 				</a>
 			</div>
@@ -62,7 +62,7 @@
 					The student-run tutoring program with a custom curriculum designed to help you thrive academically.
 				</div>
 				<div class="cta-register">
-					Register
+					<a href="javascript:document.write('this needs to redirect to the registering service')">Register</a>
 				</div>
 			</div>
 
@@ -117,7 +117,7 @@
 								someone needs to write up a description for this
 							</div>
 							<div class='panel-register'>
-								Register
+								<a href="javascript:document.write('this needs to redirect to the registering service')">Register</a>
 							</div>
 						</div>
 					</div>
@@ -142,7 +142,7 @@
 								someone needs to write up a description for this
 							</div>
 							<div class='panel-register'>
-								Register
+								<a href="javascript:document.write('this needs to redirect to the registering service')">Register</a>
 							</div>
 						</div>
 					</div>
@@ -165,7 +165,7 @@
 								someone needs to write up a description for this
 							</div>
 							<div class='panel-register'>
-								Register
+								<a href="javascript:document.write('this needs to redirect to the registering service')">Register</a>
 							</div>
 						</div>
 					</div>
