added info to panels

--- a/index.html
+++ b/index.html
@@ -114,7 +114,17 @@
 								<div class='panel-tag purple'>In-Person</div>
 							</div>
 							<div class="panel-description">
-								someone needs to write up a description for this
+								<div class="panel-description-summary">
+									Students are taught based on our enriched version of the Ontario curriculum.
+								</div>
+								<strong>This service includes:</strong><br>
+								<div class="panel-description-value">
+									✓ Math enrichment<br>
+									✓ Science enrichment<br>
+									✓ English enrichment<br>
+									✓ French enrichment<br>
+									✓ Test prep for EQAO (coming soon)<br>
+								</div>
 							</div>
 							<div class='panel-register'>
 								<a href="javascript:document.write('this needs to redirect to the registering service')">Register</a>
@@ -139,7 +149,15 @@
 								<div class='panel-tag purple'>In-Person</div>
 							</div>
 							<div class="panel-description">
-								someone needs to write up a description for this
+								<div class="panel-description-summary">
+									Students are paired with one of our mentors to aid with homework, as well as expand on in-class topics to guarantee a deeper understanding of the topic. 
+								</div>
+								<strong>This service includes:</strong><br>
+								<div class="panel-description-value">
+									✓ All subjects<br>
+									✓ Flexible hours<br>
+									✓ Individual catering<br>
+								</div>
 							</div>
 							<div class='panel-register'>
 								<a href="javascript:document.write('this needs to redirect to the registering service')">Register</a>
@@ -159,10 +177,19 @@
 								Price TBD
 							</div>
 							<div class='panel-tags'>
+								<div class='panel-tag green'>1 on 1</div>
 								<div class='panel-tag red'>Coming Soon</div>
 							</div>
 							<div class="panel-description">
-								someone needs to write up a description for this
+								<div class="panel-description-summary">
+									Students are paired with a judgement-free mentor who is fluent in the student's native language to help them adapt to a new environment.
+								</div>
+								<strong>This service includes:</strong><br>
+								<div class="panel-description-value">
+									✓ Speaking<br>
+									✓ Reading & Writing<br>
+									✓ TOEFL prep (coming soon)<br>
+								</div>
 							</div>
 							<div class='panel-register'>
 								<a href="javascript:document.write('this needs to redirect to the registering service')">Register</a>
