added contact to main page

--- a/index.html
+++ b/index.html
@@ -199,6 +199,19 @@
 				</div>
 			</div>
 
+			<div class="join">
+				<div>
+					<div class='join-title'>
+						Have questions?<br>Just ask!
+					</div>
+					<div class="join-button-wrapper">
+						<a class="join-button" href='contact.html'>
+							Contact us
+						</a>
+					</div>
+				</div>
+			</div>
+
 		</div>
 
 		<footer>
