created disabled button

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 									✓ Science enrichment<br>
 									✓ English enrichment<br>
 									✓ French enrichment<br>
-									✓ Test prep for EQAO (coming soon)<br>
+									✓ EQAO & SSAT test prep (coming soon)<br>
 								</div>
 							</div>
 							<div class='panel-register'>
@@ -191,8 +191,8 @@
 									✓ TOEFL prep (coming soon)<br>
 								</div>
 							</div>
-							<div class='panel-register'>
-								<a href="javascript:document.write('this needs to redirect to the registering service')">Register</a>
+							<div class='panel-register disable'>
+								<a class="disable">Register</a>
 							</div>
 						</div>
 					</div>
